test_output_simple.log
nohup: ignoring input
  File "analyses/gca/theoneweedit_test.py", line 51
    def extract_cond_ts(ts, cov):
      ^
IndentationError: expected an indented block
